# OpenTimeTracker

./: .gitignore  CMakeLists.txt  README.md  project.astylerc
app/: CMakeLists.txt  application.cpp  application.h  context.h  createaccountpage.cpp  createaccountpage.h  createaccountpage.ui  dbtools.cpp  dbtools.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  pointers.h
app/dbmodel/: CMakeLists.txt  connection.h  info.cpp  info.h  milestone.h  modelregistration.cpp  modelregistration.h  project.h  task.h  task.h.autosave
backends/: CMakeLists.txt
backends/activecollab/: CMakeLists.txt  backend.cpp  backend.h  common.cpp  common.h  connection.cpp  connection.h  optionswidget.cpp  optionswidget.h  optionswidget.ui
backends/activecollab/synctask/: context.cpp  context.h  pointers.h  projects.cpp  projects.h  syncall.cpp  syncall.h  tasks.cpp  tasks.h
core/: CMakeLists.txt  applicationcontext.cpp  applicationcontext.h  backend.cpp  backend.h  backgroundtask.cpp  backgroundtask.h  connection.cpp  connection.h  error.cpp  error.h  errorcode.h  errordescription.cpp  errordescription.h  finalizator.cpp  finalizator.h  implicitsharing.h  init.cpp  init.h  model.cpp  model.h  optional.h  pmsbackend.cpp  pmsbackend.h  pointers.h  pointerscommon.h
core/model/: CMakeLists.txt  category.cpp  category.h  common.h  connection.cpp  connection.h  entitylist.h  entitysync.h  info.cpp  info.h  milestone.cpp  milestone.h  modelregistration.cpp  modelregistration.h  pointers.h  priority.cpp  priority.h  project.cpp  project.h  remoteentity.cpp  remoteentity.h  root.cpp  root.h  task.cpp  task.h  tools.cpp  tools.h  user.cpp  user.h
doc/: classes.xmi
